refactor: consolidate formatting utils, add /board toggle, fix time format
- Extract shared Adventure text helpers into Fmt utility class (parse, toSectionKey, tooltip)
- Add BoardCommand (/board) for per-player scoreboard toggle; register in HimatsudoCore and plugin.yml
- MenuModule: add scoreboard ON/OFF toggle button at slot 16; move close button to slot 26
- BoardModule: simplify dynamic-key tracking with String[] per player; time HH:mm:ss → HH:mm
- TabModule: time HH:mm:ss → HH:mm; use Fmt helpers
- AfkModule, AnnounceModule, ProfileModule: replace inline LegacyComponentSerializer with Fmt
- DiscordModule: replace deprecated new URL() with URI.create().toURL()
- TextModule: remove unused Quaternionf import

https://claude.ai/code/session_014QvZLjAPsm53d17v6tHUY9